--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -46,6 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\CategoryRepository.cs" />
+    <Compile Include="Repository\ICategoryRepository.cs" />
     <Compile Include="Repository\IPodcastrepository.cs" />
     <Compile Include="Repository\PodcastRepository.cs" />
     <Compile Include="Serializer.cs" />
